attached_assets/Pasted-c-c-o-PhoneBook-class-o-PhoneBook-class-cpp-PhoneBook-c_1765644868526.txt
c++    -c -o PhoneBook.class.o PhoneBook.class.cpp
PhoneBook.class.cpp:12:10: error: cannot use dot operator on a type
                Contact.setFirst(var);
                       ^
PhoneBook.class.cpp:14:10: error: cannot use dot operator on a type
                Contact.setLast(var);
                       ^
PhoneBook.class.cpp:16:10: error: cannot use dot operator on a type
                Contact.setNick(var);
                       ^
PhoneBook.class.cpp:18:10: error: cannot use dot operator on a type
                Contact.setPhone(var);
                       ^
PhoneBook.class.cpp:20:10: error: cannot use dot operator on a type
                Contact.setSecret(var);
                       ^
PhoneBook.class.cpp:35:10: error: type 'Contact' does not provide a subscript operator
                Contact[_counter] = Contact;
                ~~~~~~~^~~~~~~~~
PhoneBook.class.cpp:49:26: warning: relational comparison result unused [-Wunused-comparison]
        for (int i; i == 0; i++ < _counter)
                            ~~~~^~~~~~~~~~
PhoneBook.class.cpp:51:16: error: use of undeclared identifier 'setw'; did you mean 'getw'?
                std::cout << setw(10) << i + 1 << " | ";
                             ^~~~
                             getw
/nix/store/vm10zh43xgfxvgrqs8brz6v6xyrq9qin-glibc-2.40-66-dev/include/stdio.h:643:12: note: 'getw' declared here
extern int getw (FILE *__stream) __nonnull ((1));
           ^
PhoneBook.class.cpp:51:21: error: cannot initialize a parameter of type 'FILE *' (aka '_IO_FILE *') with an rvalue of type 'int'
                std::cout << setw(10) << i + 1 << " | ";
                                  ^~
/nix/store/vm10zh43xgfxvgrqs8brz6v6xyrq9qin-glibc-2.40-66-dev/include/stdio.h:643:24: note: passing argument to parameter '__stream' here
extern int getw (FILE *__stream) __nonnull ((1));
                       ^
PhoneBook.class.cpp:52:16: error: use of undeclared identifier 'setw'; did you mean 'getw'?
                std::cout << setw(10) << Contact[i].getFirst() << " | ";
                             ^~~~
                             getw
/nix/store/vm10zh43xgfxvgrqs8brz6v6xyrq9qin-glibc-2.40-66-dev/include/stdio.h:643:12: note: 'getw' declared here
extern int getw (FILE *__stream) __nonnull ((1));
           ^
PhoneBook.class.cpp:52:21: error: cannot initialize a parameter of type 'FILE *' (aka '_IO_FILE *') with an rvalue of type 'int'
                std::cout << setw(10) << Contact[i].getFirst() << " | ";
                                  ^~
/nix/store/vm10zh43xgfxvgrqs8brz6v6xyrq9qin-glibc-2.40-66-dev/include/stdio.h:643:24: note: passing argument to parameter '__stream' here
extern int getw (FILE *__stream) __nonnull ((1));
                       ^
PhoneBook.class.cpp:52:28: error: 'Contact' does not refer to a value
                std::cout << setw(10) << Contact[i].getFirst() << " | ";
                                         ^
./Contact.class.hpp:8:7: note: declared here
class   Contact {
        ^
PhoneBook.class.cpp:53:16: error: use of undeclared identifier 'setw'; did you mean 'getw'?
                std::cout << setw(10) << Contact[i].getLast() << " | ";
                             ^~~~
                             getw
/nix/store/vm10zh43xgfxvgrqs8brz6v6xyrq9qin-glibc-2.40-66-dev/include/stdio.h:643:12: note: 'getw' declared here
extern int getw (FILE *__stream) __nonnull ((1));
           ^
PhoneBook.class.cpp:53:21: error: cannot initialize a parameter of type 'FILE *' (aka '_IO_FILE *') with an rvalue of type 'int'
                std::cout << setw(10) << Contact[i].getLast() << " | ";
                                  ^~
/nix/store/vm10zh43xgfxvgrqs8brz6v6xyrq9qin-glibc-2.40-66-dev/include/stdio.h:643:24: note: passing argument to parameter '__stream' here
extern int getw (FILE *__stream) __nonnull ((1));
                       ^
PhoneBook.class.cpp:53:28: error: 'Contact' does not refer to a value
                std::cout << setw(10) << Contact[i].getLast() << " | ";
                                         ^
./Contact.class.hpp:8:7: note: declared here
class   Contact {
        ^
PhoneBook.class.cpp:54:16: error: use of undeclared identifier 'setw'; did you mean 'getw'?
                std::cout << setw(10) << Contact[i].getNick() << std::endl;
                             ^~~~
                             getw
/nix/store/vm10zh43xgfxvgrqs8brz6v6xyrq9qin-glibc-2.40-66-dev/include/stdio.h:643:12: note: 'getw' declared here
extern int getw (FILE *__stream) __nonnull ((1));
           ^
PhoneBook.class.cpp:54:21: error: cannot initialize a parameter of type 'FILE *' (aka '_IO_FILE *') with an rvalue of type 'int'
                std::cout << setw(10) << Contact[i].getNick() << std::endl;
                                  ^~
/nix/store/vm10zh43xgfxvgrqs8brz6v6xyrq9qin-glibc-2.40-66-dev/include/stdio.h:643:24: note: passing argument to parameter '__stream' here
extern int getw (FILE *__stream) __nonnull ((1));
                       ^
PhoneBook.class.cpp:54:28: error: 'Contact' does not refer to a value
                std::cout << setw(10) << Contact[i].getNick() << std::endl;
                                         ^
./Contact.class.hpp:8:7: note: declared here
class   Contact {
        ^
1 warning and 17 errors generated.